Checked so that it works with the latest versions of Gmisc, Greg, and RStudio 0.98.953, R 3.1.0

--- a/FTP_example.Rmd
+++ b/FTP_example.Rmd
@@ -65,6 +65,11 @@ Main results
 ------------
 
 ```{r C_and_A, results='asis'}
+label(melanoma$sex) <- "Sex"
+label(melanoma$age) <- "Age"
+label(melanoma$ulcer) <- "Ulceration"
+label(melanoma$thickness) <- "Breslow thickness"
+
 # Setup needed for the rms coxph wrapper
 ddist <- datadist(melanoma)
 options(datadist = "ddist")
